--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -109,3 +109,10 @@
 .Vue-Toastification__toast--closing {
   animation: bounceOut 0.6s ease-out !important;
 }
+
+/* Error Toast Styling */
+.Vue-Toastification__toast--error {
+  background-color: red !important;
+  color: white !important;
+  border: 1px solid darkred;
+}
