--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -95,6 +95,7 @@
 /* Custom Close Button */
 .custom-toast .Vue-Toastification__close-button {
   color: white !important;
+  opacity: 0.8;
   font-size: 18px;
   transition: opacity 0.2s ease-in-out, transform 0.2s;
 }
